[package]
name = "WYS_ARG_experiment"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
overflow-checks = false
[profile.release.'*']
opt-level = 3
overflow-checks = false

[dependencies]
wgpu = "0.15"
env_logger = "0.10"
log = "0.4"
futures-intrusive = "^0.5"
bytemuck = "1.13.0"
pollster = "0.3.0"
lazy_static = "1.4.0"
rustc-hash = "1.1.0"
arrayvec = "0.7.2"