[package]
name = "wys_arg_experiment"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
overflow-checks = false
[profile.release.'*']
opt-level = 3
overflow-checks = false

[dependencies]
wgpu = "0.15"
env_logger = "0.10"
futures-intrusive = "^0.5"
bytemuck = { version="1.13.0", features=["derive"] }
pollster = "0.3.0"
lazy_static = "1.4.0"